# default-py-template

./: MANIFEST.in  README.md  pypi_build_and_upload.sh  pyproject.toml  requirements.dev.txt  setup.cfg  setup.py  tox.ini
src/projectname/: __init__.py
tests/: conftest.py  test_projectname.py
