[metadata]
name = projectname
version = 0.0.1
description = your description here
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Yuriy Zemskov
author_email = zemskyura@gmail.com
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
keywords = default project template
url = https://github.com/kilgoretrout1985/default-py-template
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    projectname
    # or `find:`
#install_requires =
#    requests>=2
python_requires = >=3.7
package_dir =
    =src
#zip_safe = no
include_package_data = True

[options.extras_require]
testing =
   pytest>=6.0
   pytest-cov>=2.0
   mypy>=0.910
   flake8>=3.9
   tox>=3.24

[options.package_data]
projectname = py.typed

[flake8]
max-line-length = 120